src/objects/Capture_Team__c.object
<CustomObject>
    <description>R4V1-This object refers to data.</description>
    <fields>
        <fullName>ABB_CTS_Portal__c</fullName>
        <formula>HYPERLINK(&quot;http://inside.abb.com/cawp/gad00050/4c2273ee1b1e63dcc12575ef003560c3.aspx&quot;, &quot;Portal Link&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABB CTS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <description>R5</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Capture_Team__c</fullName>
        <description>R4 - Capture Team</description>
        <formula>End_User_Project__r.Account_End_User__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Capture Team</label>
        <type>Text</type>
    </fields>
    <fields>
		<fullName>CTS_eLearning__c</fullName>
        <description>R4.1 CTS Link</description>
        <formula>HYPERLINK(&quot;http://www100.abb.com/TPOnline/NET/Public%20Course.aspx?COURSENO=COUR2013081512132901640083&quot;, &quot;Click here to access CTS e-Learning&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CTS e-Learning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Background__c</fullName>
		<inlineHelpText>Explain our past undertakings and/or relation with the customer.</inlineHelpText>
        <label>Customer Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detailed_Scope__c</fullName>
		<inlineHelpText>Describe the products/solution that ABB is going to propose for this project. Be specific and clear.</inlineHelpText>
        <label>Detailed Scope</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndUserProject_Manager__c</fullName>
        <description>R4 - End user project Manager</description>
        <formula>End_User_Project__r.Account_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndUserProject Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndUserProject_Owner__c</fullName>
        <description>R4 - End user Project Owner field</description>
        <formula>End_User_Project__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndUserProject Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>End User Project</label>
        <referenceTo>End_User_Project__c</referenceTo>
        <relationshipLabel>Capture Teams</relationshipLabel>
        <relationshipName>Capture_Teams</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>Funding_Status__c</fullName>
		<inlineHelpText>Is money released for this project and what is the status e.g. reserved, approved etc.</inlineHelpText>
        <label>Funding Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Future_Revenue__c</fullName>
        <inlineHelpText>If ABB wins the order, what is the expected incremental sale we can do in the years to come. This can be service, spare parts additional sales etc.</inlineHelpText>
        <label>Future Revenue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Expected Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Owner:User.FirstName + &quot; &quot; + Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Player_Map_Portal__c</fullName>
        <formula>HYPERLINK(&quot;https://www.playermapxray.com/session/new&quot;, &quot;Portal Link&quot;)</formula>
        <label>Player Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Driver__c</fullName>
        <inlineHelpText>Technical or business reason why the customer is doing the project e.g. increase production, lower cost.</inlineHelpText>
        <label>Project Driver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selection_Criteria_2__c</fullName>
        <inlineHelpText>Describe the 4 most important selection criterias as you understand it today. Pls. notice that this shall reflect the real customer view and not how ABB &quot;thinks&quot; it should be.</inlineHelpText>
        <label>Selection Criteria 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selection_Criteria_3__c</fullName>
        <inlineHelpText>Describe the 4 most important selection criterias as you understand it today. Pls. notice that this shall reflect the real customer view and not how ABB &quot;thinks&quot; it should be.</inlineHelpText>
        <label>Selection Criteria 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selection_Criteria_4__c</fullName>
        <inlineHelpText>Describe the 4 most important selection criterias as you understand it today. Pls. notice that this shall reflect the real customer view and not how ABB &quot;thinks&quot; it should be.</inlineHelpText>
        <label>Selection Criteria 4</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selection_Criteria__c</fullName>
        <inlineHelpText>Describe the 4 most important selection criterias as you understand it today. Pls. notice that this shall reflect the real customer view and not how ABB &quot;thinks&quot; it should be.</inlineHelpText>
        <label>Selection Criteria 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Business case</label>
        <picklist>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Expected Order Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Capture Team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Capture Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capture Teams</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>